<resources>
    <string name="app_name">Cromwell Reception</string>
    <string name="hello">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_error">Error</string>
    <string name="merlin">Merlin</string>
    <string name="main_welcome">Welcome To</string>
    <string name="main_welcome2">All Visitors - Please sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="company">Company</string>
    <string name="name">Your Name</string>
    <string name="visiting">Visiting</string>
    <string name="vehicle_reg">Vehicle Reg</string>
    <string name="request_pin">Please enter passcode to access settings:</string>
    <string name="tab_id">Please enter Provided Tablet Id:</string>
    <string name="text_loading">Loading ...</string>
    <string name="contact_search_hint">Your Name</string>
    <string name="report_name">Name</string>
    <string name="report_company">Company</string>
    <string name="report_visiting">Visitng</string>
    <string name="report_sign_in">Signed In</string>
    <string name="report_vehicle_reg">Vehicle Reg</string>
    <string name="Terms"><![CDATA[Terms & Conditions]]></string>
    <string name="NewTerms">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>